# LINQpp

./: .gitignore  CMakeLists.txt  README.md  cppcheck_report.txt  main.cpp
.github/workflows/: build.yml  cmake.yml
src/: CMakeLists.txt  Linq.hpp  LinqBase.hpp  LinqEntity.hpp  LinqEvaluatedBase.hpp  LinqTypes.hpp  LinqUtils.hpp  main.cpp
src/LINQpp/: Linq.hpp  LinqBase.hpp  LinqEntity.hpp  LinqEvaluatedBase.hpp  LinqTypes.hpp  LinqUtils.hpp
test/: CMakeLists.txt  LinqAnyAllCount_test.cpp  LinqAnyAll_test.cpp  LinqBase_test.cpp  LinqFirstLast_test.cpp  LinqSelect_test.cpp  LinqWhere_test.cpp
test/Utils/: SampleClass.hpp
